--- a/console/package.json
+++ b/console/package.json
@@ -9,6 +9,8 @@
     "build": "tsc && rollup -c",
     "postbuild": "node ./copy-dist.js",
     "build:watch": "tsc --watch",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.ts'",
     "lint:lit-analyzer": "lit-analyzer",
@@ -25,6 +27,7 @@
     "@typescript-eslint/parser": "^5.59.2",
     "@web/dev-server": "^0.2.1",
     "@webcomponents/webcomponentsjs": "^2.8.0",
+    "cypress": "^12.17.1",
     "eslint": "^8.39.0",
     "fs-extra": "^11.1.1",
     "koa-proxies": "^0.12.3",
