--- a/console/package.json
+++ b/console/package.json
@@ -14,29 +14,35 @@
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.ts'",
     "lint:lit-analyzer": "lit-analyzer",
-    "serve": "web-dev-server"
+    "mock": "node ./mock/server.js",
+    "serve": "web-dev-server",
+    "serve:watch": "npm-run-all --parallel build:watch serve"
   },
   "author": "Uanderson Soares <hey@uanderson.io>",
   "dependencies": {
-    "lit": "^2.2.4"
+    "lit": "2.8.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "@web/dev-server": "^0.2.1",
-    "@webcomponents/webcomponentsjs": "^2.8.0",
-    "cypress": "^12.17.1",
-    "eslint": "^8.39.0",
-    "fs-extra": "^11.1.1",
-    "koa-proxies": "^0.12.3",
-    "lit-analyzer": "^1.2.1",
-    "prettier": "^2.8.8",
-    "rollup": "^3.21.4",
-    "rollup-plugin-summary": "^2.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "~5.0.4"
+    "@rollup/plugin-node-resolve": "15.0.2",
+    "@rollup/plugin-replace": "5.0.2",
+    "@types/node": "20.4.9",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
+    "@web/dev-server": "0.2.1",
+    "@webcomponents/webcomponentsjs": "2.8.0",
+    "chalk": "5.3.0",
+    "cypress": "12.17.1",
+    "eslint": "8.39.0",
+    "fs-extra": "11.1.1",
+    "json-server": "0.17.3",
+    "koa-proxies": "0.12.3",
+    "lit-analyzer": "1.2.1",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.8.8",
+    "rollup": "3.21.4",
+    "rollup-plugin-summary": "2.0.0",
+    "rollup-plugin-terser": "7.0.2",
+    "typescript": "5.0.4"
   },
   "customElements": "custom-elements.json"
 }
